--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -54,6 +54,7 @@
                     });
                     $("#date_creation").val(creationDate);
 
+                    $("#expected_previous").val(result.results[0].expectedCount);
                     $("#count_previous").val(result.results[0].previousCount);
                     $("#count_last").val(result.results[0].lastCount);
 
@@ -323,6 +324,27 @@
                         <!-- Counts -->
                         <div class="row">
                             <div class="row col-12">
+                                <div class="form-group col no-gutters">
+                                    <label class="col-12 col-form-label" for="expected_previous">Ultimi previsti</label>
+                                    <div class="col-12">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text">
+                                                    <i class="fa fa-bar-chart-o"></i>
+                                                </div>
+                                            </div>
+                                            <input
+                                                aria-describedby="expected_previousHelpBlock"
+                                                class="form-control"
+                                                id="expected_previous"
+                                                name="expected_previous"
+                                                readonly
+                                                type="text"
+                                            />
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="form-group col no-gutters">
                                     <label class="col-12 col-form-label" for="count_previous">Conta Precedente</label>
                                     <div class="col-12">
