--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -55,8 +55,10 @@
                     $("#date_creation").val(creationDate);
 
                     //EXPECTED COUNT
+                    previousExpectedCount = 0;
                     const expected_count_requester = new Requester(function (warehouseExpectedCount) {
                         $("#expected_count").val(warehouseExpectedCount.results.N_TOT[0]);
+                        previousExpectedCount = warehouseExpectedCount.results.N_TOT[0];
                     });
                     expected_count_requester.query({
                         q_name: "warehouse_expected_count",
@@ -119,7 +121,6 @@
                             LOTTO: "lotto",
                             "TIPO UDM": "tipoudm",
                         };
-                        console.log(warehouseGetDynamicLocations);
                         $("#dynamic-locations-table-container").empty();
                         $("#notFoundLocations").empty();
                         if (warehouseGetDynamicLocations.results.length !== 0) {
@@ -156,10 +157,10 @@
                     $("#btn-count").click((e) => {
                         if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
                             if (requestState == "countRequest") {
-                                warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest");
+                                warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest", previousExpectedCount);
                                 location.reload();
                             } else if (requestState == "recountRequest") {
-                                warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest");
+                                warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest", previousExpectedCount);
                                 location.reload();
                             }
                         } else {
