[CHECKPOINT: Finished application + Fixed Bugs]

--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -149,12 +149,8 @@
                                     <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                                     <div class="col-12">
                                         <div class="input-group" style="margin-left: 0">
-                                            <!--                                    <div class="input-group-prepend">-->
-                                            <!--                                        <div class="input-group-text"><i class="fa fa-tag"></i></div>-->
-                                            <!--                                    </div>-->
                                             <select aria-describedby="prod_codeHelpBlock" class="form-control" id="prod_code" name="prod_code" required="required"></select>
                                         </div>
-                                        <span class="form-text text-muted" id="prod_codeHelpBlock">Inerisci i dati del prodotto e seleziona l'occorrenza corretta.</span>
                                     </div>
                                 </div>
                                 <div class="form-group col no-gutters">
@@ -176,7 +172,6 @@
                                                 type="text"
                                             />
                                         </div>
-                                        <span class="form-text text-muted" id="prod_nameHelpBlock">Descrizione del prodotto.</span>
                                     </div>
                                 </div>
                             </div>
@@ -184,11 +179,10 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group row margin-top-20">
                         <label class="col-1 col-form-label" for="notes">Note</label>
                         <div class="col-11">
                             <textarea aria-describedby="notesHelpBlock" class="form-control" cols="40" id="notes" name="notes" rows="3"></textarea>
-                            <span class="form-text text-muted" id="notesHelpBlock">Aggiungi note alla richesta</span>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -203,7 +197,7 @@
                             type="text"
                         />
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group row margin-top-20">
                         <label class="col-1 col-form-label" for="date_due">Data Scadenza</label>
                         <div class="col-11">
                             <div class="input-group">
@@ -214,7 +208,6 @@
                                 </div>
                                 <input aria-describedby="date_dueHelpBlock" class="form-control" id="date_due" name="date_due" required="required" type="date" />
                             </div>
-                            <span class="form-text text-muted" id="date_dueHelpBlock">Data di scadenza della richiesta</span>
                         </div>
                     </div>
 
