--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -404,8 +404,8 @@
 
             <div class="sub-header">
                 <div class="styled-btn btn-blue text-align-center">
-                    <input id="btn-show-closed" type="checkbox" />
-                    <label for="btn-show-closed">Mostra Chiuse</label>
+                    <input id="btn-show-closed" type="checkbox" checked />
+                    <label for="btn-show-closed">Mostra solo aperte</label>
                 </div>
                 <a class="styled-btn btn-blue text-align-center no-text-decoration" href="office_create.html" id="btn-add-request" type="button">Aggiungi Richesta</a>
             </div>
